<resources>
    <string name="app_name">Movies First Stage</string>

    <string name="api_key">
         <!--Enter Your Api Key for https://api.themoviedb.org-->
    </string>

    <string name="sort_by_popular">popular</string>
    <string name="sort_by_top_rated">top_rated</string>
    <string name="original_title">Original Title</string>
    <string name="overview">OverView</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_data">No Data</string>
    <string name="order_by">Order By</string>
    <string name="order_by_popular">Order by popular</string>
    <string name="order_by_top_rated">Order by top rated</string>
    <string name="error_message">Error</string>
</resources>
