<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/iv_poster_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitXY" />


    <ProgressBar
        android:id="@+id/pb_movie"
        android:layout_width="@dimen/progress_bar_dimension"
        android:layout_height="@dimen/progress_bar_dimension"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ly_movie_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linear_layout_margin"
            android:orientation="vertical">

            <LinearLayout style="@style/movie_details_linear_layout">

                <TextView
                    style="@style/movie_details_text_view_label"
                    android:text="@string/original_title" />

                <TextView
                    android:id="@+id/tv_original_title"
                    style="@style/movie_details_text_view_value" />

            </LinearLayout>

            <LinearLayout style="@style/movie_details_linear_layout">

                <TextView
                    style="@style/movie_details_text_view_label"
                    android:text="@string/overview" />

                <TextView
                    android:id="@+id/tv_overview"
                    style="@style/movie_details_text_view_value" />

            </LinearLayout>

            <LinearLayout style="@style/movie_details_linear_layout">

                <TextView
                    style="@style/movie_details_text_view_label"
                    android:text="@string/vote_average" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    style="@style/movie_details_text_view_value" />

            </LinearLayout>

            <LinearLayout style="@style/movie_details_linear_layout">

                <TextView
                    style="@style/movie_details_text_view_label"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/movie_details_text_view_value" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/detail_error_message"
        android:text="@string/no_data"
        android:visibility="gone"
        android:gravity="center"
        android:textStyle="bold"/>

</LinearLayout>